<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_server_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:text="@string/enter_server_address"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_and_port_hint"
        android:inputType="text"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/enter_server_address" />


    <TextView
        android:id="@+id/newtwork_discovery_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:layout_marginRight="3dp"
        android:text="@string/network_discovery"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/address"

        tools:visibility="visible" />

    <ListView
        android:id="@+id/server_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/newtwork_discovery_text"
        tools:listitem="@android:layout/simple_list_item_1" />


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_login_bg"
        android:enabled="false"
        android:text="@string/connect"
        android:textColor="@color/button_login_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>